# gar-llm

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  SIGNED_TEST.txt  pyproject.toml
docs/: GAR_Design_Spec.md
gateway/: relay_server.py
modules/garllm/context_layer/: cleaner.py  condenser.py  retriever.py  semantic_condenser.py  thought_profiler.py
modules/garllm/gateway/: relay_server.py
modules/garllm/persona_layer/: persona_generator.py
modules/garllm/style_layer/: context_controller.py  lexical_injector.py  response_modulator.py  style_modulator.py  test_emotions.sh
modules/garllm/tests/: test_relay_personas.sh
modules/garllm/utils/: env_utils.py  llm_client.py  vllm_client.py
src/gar_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/garllm/context_layer/: retriever.py  semantic_condenser.py  thought_profiler.py
src/garllm/gateway/: relay_server.py  render_plan_builder.py
src/garllm/persona_layer/: persona_generator.py
src/garllm/style_layer/: context_controller.py  response_modulator.py  style_modulator.py
src/garllm/utils/: env_utils.py  llm_client.py  logger.py
style_layer/: response_modulator.py
systemd_units/: vllm@.service
webui/: docker-compose.yml
webui/scripts/: auto_env_update.sh  restart_webui.sh
